newpipe/install/traefik/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: traefik
  labels:
    app.kubernetes.io/name: traefik
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: traefik
  template:
    metadata:
      labels:
        app.kubernetes.io/name: traefik
    spec:
      serviceAccountName: traefik
      containers:
        - name: traefik
          image: traefik:v3.0
          args:
            - "--api.dashboard=true"
            - "--api.insecure=true"
            - "--providers.kubernetescrd.allowCrossNamespace=true"
            - "--providers.kubernetescrd.allowExternalNameServices=true"
            - "--entrypoints.web.address=:80"
            - "--entrypoints.websecure.address=:443"
            - "--providers.kubernetescrd"
            - "--providers.kubernetesingress"
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
