newpipe/install/traefik/03-service-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:369977587964:certificate/dedac4c6-1167-4e45-b768-99519d3dde78"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/load-balancer-name: traefik-external
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/success-codes: "200-399"
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/subnets: "subnet-0ec5050687968d871,subnet-01d980e76a46cb206"
spec:
  type: NodePort
  ports:
    - name: web
      nodePort: 30080
      port: 80
      targetPort: web
      protocol: TCP
    - name: websecure
      nodePort: 30443
      port: 443
      targetPort: websecure
      protocol: TCP
  selector:
    app.kubernetes.io/name: traefik
